--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,6 @@
     <div class="task_bar">
       <div class="task_bar_left"></div>
     </div>
-    <script src="./index.ts"></script>
+    <script src="index.ts"></script>
 </body>
 </html>
