--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>AI - Webex Design</title>
-  <base href="/">
   <!-- Google tag (gtag.js) -->
   <link rel="stylesheet" href="./index.css" type="text/css" media="all" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body class="desktop">
-    <div id="loading">Waiting for Loading</div>
+    <div id="loading">
+      <h1 id="h1_loading">Select a model folder</h1>
+      <input type="file" id="ipt_files" webkitdirectory multiple />
+    </div>
     <div class="desktop_main">
       <div class="client">
         <div class="video_con">
@@ -47,6 +49,6 @@
     <div class="task_bar">
       <div class="task_bar_left"></div>
     </div>
-    <script src="index.ts"></script>
+    <script src="./index.ts"></script>
 </body>
 </html>
