change load local

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
               <img class="item" data-type="2" src="../assets/styles/style3.jpg" />
               <img class="item" data-type="2" src="../assets/styles/style4.jpg" />
               <img class="item" data-type="2" src="../assets/styles/style5.jpg" />
+              <img class="item" data-type="2" src="../assets/styles/style6.jpg" />
+              <img class="item" data-type="2" src="../assets/styles/style7.jpg" />
             </div>
             <h1>Background Image</h1>
             <div class="panel_items">
@@ -40,6 +42,7 @@
               <img class="item" data-type="3" src="../assets/styles/bg4.jpg" />
               <img class="item" data-type="3" src="../assets/styles/bg5.jpg" />
               <img class="item" data-type="3" src="../assets/styles/bg6.jpg" />
+              <img class="item" data-type="3" src="../assets/styles/bg7.jpg" />
             </div>
           </div>
         </div>
